# NeuralMLP

./: .gitignore  CMakeLists.txt  README.md
Archive/: Engine.h
GeneratorFiles/: TrainData.xml
NeuralMLP/: CMakeLists.txt  Engine.cpp  Engine.h  Source.cpp
NeuralMLPLib/: CMakeLists.txt  NeuralUtils.cpp  NeuralUtils.h  ScoreUtils.cpp  ScoreUtils.h  TrainData.h
NeuralMLPTests/: CMakeLists.txt
NeuralMLPTests/Tests/: Example_Tests.cpp  NeuralUtils_Tests.cpp
Resources/: config.xml
Resources/Input/: data.arff  problem.arff
Resources/Output/: readme.md
